<resources>
    <string name="app_name">NewsApp</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connected">Connected</string>
    <string name="no_news">No news found</string>
    <string name="news_topic">news_topic</string>
    <string name="news_topic_title">Topic</string>
    <string name="news_topic_default">Sharks</string>
    <string name="news_person">news_person</string>
    <string name="news_person_title">Person</string>
    <string name="news_location">news_location</string>
    <string name="news_location_title">Location</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>
</resources>
